--- a/css/card.css
+++ b/css/card.css
@@ -2,16 +2,19 @@
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  padding: 90px 20px;
-
+  padding: 90px 90px;
+  background-color: black;
+  
 }
 
 .card {
   width: 300px;
-  background: #fff;
+  background: black;
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+  border: 1px solid orange;
+  color: white;
 }
 
 .card img {
@@ -27,10 +30,9 @@
 .card h3 {
   margin-bottom: 10px;
   font-size: 18px;
-   color: black;
-}
+   }
 
 .card p {
   font-size: 14px;
-  color: #555;
+
 }
