--- a/css/core.css
+++ b/css/core.css
@@ -10,9 +10,8 @@
 
 body {
     font-family: "Britannic Bold", sans-serif;
-    background: #c2d0d0;
+    background: black;
 }
-
 .btn {
     width: 250px;
     height: 50px;
